--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,8 @@ select * from chn_areas where match (soundex(a_name),soundex(a_sub),soundex(a_pi
 
  SELECT * FROM chn_areas WHERE ( (soundex(a_name) LIKE soundex('porur')) OR (soundex(a_sub) LIKE soundex('porur')) )OR ( (soundex(a_name) LIKE soundex('porur')) OR (soundex(a_sub) LIKE soundex('porur')) ) OR a_name in (select a_name from chn_areas where a_name like '%kan%' or a_sub like'%north%') order by a_rating;
 
+https://image.flaticon.com/icons/svg/135/135838.svg
+https://image.flaticon.com/icons/svg/136/136280.svg
 
 triggers to update visits
 
@@ -15,3 +17,6 @@ triggers to update visits
  https://webdesign.tutsplus.com/tutorials/silky-smooth-web-animation-with-velocityjs--cms-24266
 
  https://daneden.github.io/animate.css/
+
+ ------------------------------------------------
+ store search results in json and use it for loading
